# learn-python-with-tests

./: .gitignore  .gitmodules  README.md  SUMMARY.md  config.toml
content.en/: README.md  _index.md  install-python.md
examples/: Gemfile  pyproject.toml  test_foo.py  test_foo.rb
examples/booleans/: booleans.py  test_booleans.py
examples/hello/: hello.py  hello.rb  hello_test.rb  test_hello.py
examples/lists/: lists.py  test_lists.py
examples/numbers/: test_adder.py
public/: 404.html  en.search-data.json  en.search-data.min.2bc822fe6439a67c582287055b82565170a5a541c8344ccd6e0d4b77b3d47043.json  en.search-data.min.5041f283ea5e67aebb27f985799af50609ea664d06089f6446a9d276fc19e5ff.json  en.search-data.min.82d584e88b3c2d4f804ea73a9192266755c2406fe046e77b2d73b9365abd6a4d.json  en.search-data.min.899c36a0c1e15947ae3246d7978f9bc173799f14e6b000c59e639c7ed31d4c05.json  en.search-data.min.973e977d31a91a06e952b3e1d77cf1629902b7093a7250d38f9c4963ee6bba49.json  en.search-data.min.99b339e93fcca73f81ea85a0f63bdfd459e3ee12177563612b2d36090fd0f8b2.json  en.search-data.min.9cbe86070aa55acd2a84fb3a4e2b4250727bd6a2dcf9354d60c18ce166c771cf.json  en.search-data.min.e729bdbaa54b218578637022c40a2448ffcaa42905ecfe5fe2670e9bd0c95711.json  en.search.min.01743d93c00f4ef202b3c5604c6711ec9cb05938d4f1903d5811ca5340f1002b.js  en.search.min.0f409ed64d4a14f38931e5c4cd8c46ed6298c98d81d83f511df6de2bb52f0559.js  en.search.min.1cab0f86e1bb533dff0fbab31db830ab1643ffa5aa192ad97161fc41711851a3.js  en.search.min.2463dcd50003d8a5a4766dbe39d5c8a068cefede25f908655bf038a1e08a365f.js  index.html  index.xml  (+7 more)
(+94 files in other folders)
