[tool.poetry]
name = "examples"
version = "0.1.0"
description = ""
authors = ["Pedro López Mareque <pedro.lopez.mareque@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"

[tool.poetry.group.dev.dependencies]
expects = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
